package whist.interfaces;

public interface IObserver {

    //method to update the observer, used by subject
    void update();
}